--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Are Labour unlucky (or are they just rubbish)?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Learning to Handle the More Difficult Events in Life</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>4 Great Algo Trading Tips!</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -919,7 +919,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -930,7 +930,7 @@
                     <div class="video-info">
                         <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1579,7 +1579,7 @@
                     <div class="video-info">
                         <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Are Labour unlucky (or are they just rubbish)?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>4 Great Algo Trading Tips!</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5439,7 +5439,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5758,7 +5758,7 @@
                         <div class="video-info">
                             <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Learning to Handle the More Difficult Events in Life</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7568,7 +7568,7 @@
                         <div class="video-info">
                             <h3>There is no need to control you  mind. Your mind needs liberation. | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
