--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Path from Fear to Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>After 10 Years in Trading I Finally Succeeded</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -475,7 +475,7 @@
                     <div class="video-info">
                         <h3>What Is The Right Age To Start A Relationship? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -486,7 +486,7 @@
                     <div class="video-info">
                         <h3>Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -585,7 +585,7 @@
                     <div class="video-info">
                         <h3>Pythagoras & His Bizarre Cult</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -596,7 +596,7 @@
                     <div class="video-info">
                         <h3>Pythagoras Was a Cult Leader</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -607,7 +607,7 @@
                     <div class="video-info">
                         <h3>How Pythagoras Punished His Followers</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -763,7 +763,7 @@
                     <div class="video-info">
                         <h3>News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -897,7 +897,7 @@
                     <div class="video-info">
                         <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -985,7 +985,7 @@
                     <div class="video-info">
                         <h3>Showing Exactly How To Get Funded (Step by Step)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2327,7 +2327,7 @@
                     <div class="video-info">
                         <h3>I Failed At My First Attempt Making Canotto Pizza… But Here’s Why!</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 06, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Payouts Rejected and Accounts Terminated!? The REAL REASON why I left FTMO</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>The Hedge Fund Strategy No One Talks About 🧠💰</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5160,7 +5160,7 @@
                         <div class="video-info">
                             <h3>After 10 Years in Trading I Finally Succeeded</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5360,7 +5360,7 @@
                         <div class="video-info">
                             <h3>News Filter Programming for MT5 Expert Advisor (mql5 Tutorial)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5472,7 +5472,7 @@
                         <div class="video-info">
                             <h3>Showing Exactly How To Get Funded (Step by Step)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Path from Fear to Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Have This Unique Problem! | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7370,7 +7370,7 @@
                         <div class="video-info">
                             <h3>What Is The Right Age To Start A Relationship? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7381,7 +7381,7 @@
                         <div class="video-info">
                             <h3>Mindfulness on the Go | Eckhart Tolle on The Path To Enlightenment (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7414,7 +7414,7 @@
                         <div class="video-info">
                             <h3>Pythagoras & His Bizarre Cult</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7425,7 +7425,7 @@
                         <div class="video-info">
                             <h3>Pythagoras Was a Cult Leader</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7436,7 +7436,7 @@
                         <div class="video-info">
                             <h3>How Pythagoras Punished His Followers</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7447,7 +7447,7 @@
                         <div class="video-info">
                             <h3>Spiritual Growth Is Beyond Your Comfort Zone | Eckhart Tolle on The Path To Enlightenment (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7557,7 +7557,7 @@
                         <div class="video-info">
                             <h3>Uncovering the Wakefulness Within You | Eckhart Tolle on The Paradox of Time (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8757,7 +8757,7 @@
                         <div class="video-info">
                             <h3>POV: Making Neapolitan Pizza While Answering Your Questions</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8999,7 +8999,7 @@
                         <div class="video-info">
                             <h3>I Failed At My First Attempt Making Canotto Pizza… But Here’s Why!</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 06, 2025</div>
                         </div>
                     </a>
                 </div>
